some final modifs in this project ^_^