@@ -1,12 +1,11 @@
 package com.sorec.dashboardcashmanagement.mapper;
 
 import com.sorec.dashboardcashmanagement.dto.VilleDTO;
-import com.sorec.dashboardcashmanagement.model.PointDeVente;
 import com.sorec.dashboardcashmanagement.model.Ville;
 import org.springframework.stereotype.Component;
-
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
 @Component
 public class VilleMapper implements EntityMapper<Ville, VilleDTO>{
 
@@ -20,7 +19,7 @@ public class VilleMapper implements EntityMapper<Ville, VilleDTO>{
 
     @Override
     public List<VilleDTO> toDtos(List<Ville> entities) {
-        return entities.stream().map(this::toDto).collect(Collectors.toList());
+        return entities.stream().map(this::toDto).toList();
     }
 
     @Override
@@ -37,6 +36,6 @@ public class VilleMapper implements EntityMapper<Ville, VilleDTO>{
 
     @Override
     public List<Ville> toEntities(List<VilleDTO> dtos) {
-        return null;
+        return Collections.emptyList();
     }
 }
